--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swieba Client Sklep</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <style>
         body {
             margin: 0;
@@ -75,5 +76,6 @@
 
 </body>
 </html>
+
 
 
