--- a/kup.html
+++ b/kup.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kup Świeba Client</title>
+    <title>Koszyk - Swieba Client</title>
+	<link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <style>
         body {
             margin: 0;
@@ -156,3 +158,4 @@
 
 </body>
 </html>
+
