--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/png" href="images/favicon.png">
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 <title>Swieba Client Sklep</title>
 <style>
 body {
@@ -335,3 +337,4 @@ function checkout(){
 </script>
 </body>
 </html>
+
