--- a/kup.html
+++ b/kup.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" type="image/png" href="images/favicon.png">
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Kup Świeba Client</title>
     <style>
 
@@ -162,3 +164,4 @@ h1, h2 {
 
 </body>
 </html>
+
