--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@ button:hover {
         </div>
         <div class="product">
             <img src="images/client3.png" alt="Client 3">
-            <h2>Swieba Client 3</h2>
-            <p>Cena: 40,00 zł</p>
-            <button onclick="addToCart('Swieba Client 3',40,'images/client3.png')">Dodaj do koszyka</button>
+            <h2>Produkt dostępny wkrótce</h2>
+            <p>Cena: 0,00 zł</p>
+            <button onclick="addToCart('Produkt dostępny wkrótce',0,'images/client3.png')">Dodaj do koszyka</button>
         </div>
     </div>
 
@@ -337,4 +337,5 @@ function checkout(){
 </script>
 </body>
 </html>
+
 
