--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ button:hover {
             <a href="https://www.youtube.com/@wvnch4j" target="_blank">YouTube wvnch4j</a>
             <a href="https://discord.gg/RVME9AK57N" target="_blank">Nasz Discord</a>
         </div>
-        <p class="copyright">© 2026 Świeba Client — Wszelkie prawa zastrzeżone</p>
+        <p class="copyright">© 2026 Swieba Client — Wszelkie prawa zastrzeżone</p>
     </div>
 </footer>
 
@@ -337,5 +337,6 @@ function checkout(){
 </script>
 </body>
 </html>
+
 
 
