--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/png" href="images/favicon.png">
 <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-<title>Swieba Client Sklep</title>
+<title>Sklep Swieba Client</title>
 <style>
 body {
     margin: 0;
@@ -214,15 +214,15 @@ button:hover {
     <div class="products">
         <div class="product">
             <img src="images/client1.png" alt="Client 1">
-            <h2>Swieba Client 1</h2>
+            <h2>Swieba Client </h2>
             <p>Cena: 30,00 zł</p>
-            <button onclick="addToCart('Swieba Client 1',30,'images/client1.png')">Dodaj do koszyka</button>
+            <button onclick="addToCart('Swieba Client',30,'images/client1.png')">Dodaj do koszyka</button>
         </div>
         <div class="product">
             <img src="images/client2.png" alt="Client 2">
             <h2>Config Swieba Client</h2>
             <p>Cena: 10,00 zł</p>
-            <button onclick="addToCart('Config Swieba Client 2',10,'images/client2.png')">Dodaj do koszyka</button>
+            <button onclick="addToCart('Config Swieba Client',10,'images/client2.png')">Dodaj do koszyka</button>
         </div>
         <div class="product">
             <img src="images/client3.png" alt="Client 3">
@@ -252,7 +252,7 @@ button:hover {
             <strong>- wyc1nak</strong>
         </div>
         <div style="background:#111; border:2px solid #3498db; padding:15px; width:250px; border-radius:8px;">
-            <p>"Polecam każdemu, kto gra w Minecrafta."</p>
+            <p>"Polecam każdemu, kto gra w Minecrafta1.8.9."</p>
             <strong>- Histears</strong>
         </div>
     </div>
@@ -337,6 +337,7 @@ function checkout(){
 </script>
 </body>
 </html>
+
 
 
 
