--- a/index.html
+++ b/index.html
@@ -226,9 +226,11 @@ button:hover {
         </div>
         <div class="product">
             <img src="images/client3.png" alt="Client 3">
-            <h2>Produkt dostępny wkrótce</h2>
-            <p>Cena: 0,00 zł</p>
-            <button onclick="addToCart('Produkt dostępny wkrótce',0,'images/client3.png')">Dodaj do koszyka</button>
+            <h2>txt na zamówienie</h2>
+            <h3>*opłata w wysokości 20-50zl wpływa na jakość wykonanego txt</h3>
+            <h4>*należy opisać swoje wymagania do txt w tickecie na discordzie</h4>
+            <p>Cena: 20,00 zł</p>
+            <button onclick="addToCart('Teksturepack na zamówienie 20-50zł',0,'images/client3.png')">Dodaj do koszyka</button>
         </div>
     </div>
 
@@ -337,6 +339,7 @@ function checkout(){
 </script>
 </body>
 </html>
+
 
 
 
