--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ button:hover {
             <h2>txt na zamówienie</h2>
             <h3>*opłata w wysokości 20-50zl wpływa na jakość wykonanego txt</h3>
             <h4>*należy opisać swoje wymagania do txt w tickecie na discordzie</h4>
-            <p>Cena: 20,00 zł</p>
+            <p>Cena: 20,00 - 50,00zł</p>
             <button onclick="addToCart('Teksturepack na zamówienie 20-50zł',0,'images/client3.png')">Dodaj do koszyka</button>
         </div>
     </div>
@@ -339,6 +339,7 @@ function checkout(){
 </script>
 </body>
 </html>
+
 
 
 
